Removing .idea files from the project

--- a/MultipleLanguage/app/src/main/res/values-fr/strings.xml
+++ b/MultipleLanguage/app/src/main/res/values-fr/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Multiple Language</string>
-    <string name="name">French Vanakkam</string>
+    <string name="name">Le code est-il la langue la plus importante au monde?</string>
 </resources>
