--- a/MultipleLanguage/app/src/main/res/values/strings.xml
+++ b/MultipleLanguage/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Multiple Language</string>
-    <string name="name">Vanakkam</string>
+    <string name="name">Is the code most important language in the world?</string>
 </resources>
